[gd_scene load_steps=3 format=3 uid="uid://detoul8vx6ub0"]

[ext_resource type="Script" path="res://scenes/ui/login/Login.gd" id="1_hgvfh"]

[sub_resource type="LabelSettings" id="LabelSettings_4jus2"]
font_size = 34

[node name="VBoxContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hgvfh")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 6
text = "Realizar Login"
label_settings = SubResource("LabelSettings_4jus2")
horizontal_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Insira seu usu√°rio"

[node name="PasswordInput" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Insira sua senha"

[node name="Button" type="Button" parent="."]
layout_mode = 2
disabled = true
text = "Entrar no jogo"

[connection signal="text_changed" from="UsernameInput" to="." method="_on_username_input_text_changed"]
[connection signal="text_changed" from="PasswordInput" to="." method="_on_password_input_text_changed"]
